--- a/fitsmu-5a/fitsmu-5a.vcxproj.filters
+++ b/fitsmu-5a/fitsmu-5a.vcxproj.filters
@@ -19,4 +19,20 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="d_except.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="d_matrix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="graph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Data\maze1.txt" />
+    <Text Include="Data\maze2.txt" />
+    <Text Include="Data\maze3.txt" />
+  </ItemGroup>
 </Project>
